manifests/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-rules
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website-service
                port:
                  number: 80

    - host: api.myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 80
    - host: admin.myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: admin-service
                port:
                  number: 80
